# driftwave

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  SystemDesign.md  docker-compose.yml  driftwave-system-design.html  driftwave-ux.html
.github/workflows/: ci.yml
api/: Dockerfile  config.py  main.py  requirements.txt
api/core/: navidrome.py  retriever.py  suggestions.py
api/routes/: auth.py  index.py  library.py  playlist.py  search.py  stream.py
frontend/: Dockerfile  build-windows.bat  dev-windows.bat  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/components/: Layout.jsx  NowPlayingSidebar.jsx  PlayerBar.jsx  SearchSuggestions.jsx  ThemePicker.jsx
frontend/src/hooks/: useDiscoverStore.js  usePlayerStore.js
frontend/src/pages/: DiscoverPage.jsx  LibraryPage.jsx  SetupPage.jsx  (+3 more)
indexer/: Dockerfile  audio_analyzer.py  config.py  db.py  describer.py  embedder.py  film_meta.py  language_detector.py  main.py  models.py  navidrome.py  pipeline.py  requirements.txt  tag_extractor.py  watcher.py
indexer/adapters/: __init__.py  arabic.py  default.py  hindi.py  korean.py  tamil.py  telugu.py
indexer/lyrics/: fetcher.py  tamil.py
mobile/: README.md  pubspec.yaml
mobile/lib/: main.dart
mobile/web/: index.html  manifest.json
releases/: README.md
releases/windows/: README.md
scripts/: generate_icons.py
(+17 files in other folders)
